# Axium

./: .clangd  CMakeLists.txt
include/AXM/: Data.hpp  Device.hpp  Tensor.hpp  TensorDescriptor.hpp  api.hpp  operations.hpp  tensor_util.hpp  types.hpp
src/: Data.cpp  Device.cpp  Tensor.cpp  TensorDescriptor.cpp  tensor_util.cpp  types.cpp  util.hpp
src/operation/: element_wise.cpp  gemm.cpp  gemm_naive.cpp  gemm_naive.cu
test/: main.cpp
